# CRayTracing

./: App.c  App.h  CMakeLists.txt  Camera.c  Image.c  Image.h  Light.c  Light.h  Lights.h  Mat4.h  Material.c  Material.h  Objects.h  Plane.c  Plane.h  Ray.h  Scene.c  Scene.h  SimpleMaterial.c  SimpleMaterial.h  Sphere.c  Sphere.h  Tranform.h  Transform.c  Transform.h  Window.c  Window.h  main.c  vec3.h
Lights/: Lights.h  PointLight.c  PointLight.h
Objects/: Objects.h  Plane.h  Sphere.c  Sphere.h
src/: App.c  App.h  Camera.c  Camera.h  Image.c  Mat4.h  Material.c  Material.h  Ray.c  Ray.h  Ray_Tracing.c  Ray_Tracing.h  Scene.c  Scene.h  SimpleMaterial.c  SimpleMaterial.h  Transform.c  Transform.h  main.c  vec3.h  vec4.h
src/Lights/: Lights.h  PointLight.c
src/Materials/: BaseMaterial.c  Material.c  Material.h  Refrective.c  SimpleMaterial.c
src/Maths/: Mat3.h  MathsHeader.h  Transform.c  Transform.h  vec2.h  vec3.h
src/Objects/: Cone.c  Cube.c  Cylinder.c  Objects.h  Plane.c  Sphere.c
src/Scenes/: Image_Texture.h  Multiple_Shapes.h  Scene_Cube.h  Scene_Image_Texture.h  Scene_Multiple_Shapes.h  Scene_Refractive_Shapes.h  Scene_Single_Cylinder.h  Scene_Texture_Mapping.h  Scenes.h  Single_Cylinder.h  Texture_Mapping.h
src/Textures/: Checker.c  Checker.h  Flat.c  Flat.h  Images.c  Textures.c  Textures.h
